new section added

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 <body>
 	<h1>title</h1>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores eveniet nemo adipisci molestiae sequi reprehenderit neque cumque asperiores. Natus tenetur architecto aliquam vel, esse! Debitis quam reiciendis, repudiandae rem. Quia.</p>
+	<ul>
+		<li>lorem</li>
+		<li>ipsum</li>
+		<li>dolor</li>
+	</ul>
 </body>
 </html>
