--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
 </head>
 <body>
 	<h1>title</h1>
+	<nav>
+		<ul>
+			<li>lorem</li>
+			<li>ipsum</li>
+			<li>dolor</li>
+		</ul>
+	</nav>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores eveniet nemo adipisci molestiae sequi reprehenderit neque cumque asperiores. Natus tenetur architecto aliquam vel, esse! Debitis quam reiciendis, repudiandae rem. Quia.</p>
-	<ul>
-		<li>lorem</li>
-		<li>ipsum</li>
-		<li>dolor</li>
-	</ul>
+	<section>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas optio modi saepe repellat omnis placeat voluptatem nemo, harum repellendus amet, inventore quia aliquam totam facilis unde ab illum debitis cumque.</p>
+	</section>
 	<footer>
 		<h3>This is a new footer</h3>
 	</footer>
